2016-11-30  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (before_install): Activate PPA as we (currently)
	need an updated version of (r-cran)-covr to run coverage
	* tests/load-unload.R: Comment-out for now as it upsets coverage

	* tests/digestTest.R: Test two more algorithms
	* tests/digestTest.Rout.save: Updated reference output

2016-11-26  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (after_success): Integrated Jim Hester's suggestion of
	activating code coverage sent many moons ago (in PR #12)
	* .codecov.yml (comment): Added
	* .Rbuildignore: Exclude .codecov.yml
	* README.md: Added code coverage badge

2016-10-16  Dirk Eddelbuettel  <edd@debian.org>

	* R/digest.R (digest): Support 'nosharing' option of base::serialize
	as suggested by Radford Neal whose pqR uses this

2016-08-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (License): Now GPL (>= 2), cf issue 36 on GH

	* README.md: Updated badge accordingly

2016-08-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): Release 0.6.10

	* DESCRIPTION (Description): Shortened to one paragraph
	* DESCRIPTION (BugReports): URL to GH issues added

	* .travis.yml: Rewritten for run.sh from forked r-travis

2016-07-12  Henrik Bengtsson  <hb@aroma-project.org>

	* src/digest.c: Correct bug with skip and file parameter interaction
	* tests/digestTest.R: Test code
	* tests/digestTest.Rout.save: Test reference output

	* R/zzz.R: Allow for unloading of shared library
	* tests/load-unload.R: Test code

	* DESCRIPTION: Rolled minor Version and Date

2016-05-25 Thierry Onkelinx <thierry.onkelinx@inbo.be>

	* R/sha1.R: Support for pairlist and name
	* tests/sha1Test.R: Support for pairlist and name
	* man/sha1.Rd: Support for pairlist, name, complex, array and Date
	* NAMESPACE: Support for pairlist, name and array
	* DESCRIPTION: bump version number and date

2016-05-01  Viliam Simko  <viliam.simko@gmail.com>

	* R/sha1.R: Support for complex, Date and array
	* tests/sha1Test.R: Ditto