@@ -1,3 +1,3 @@
-.onUnload <- function (libpath) {
+.onUnload <- function (libpath) { # nocov start
   library.dynam.unload("digest", libpath)
-}
+} # nocov end
